# cauldronpy

./: .gitignore  protocolsio.ris  pyproject.toml  testpy.py
cauldron/: alphapept_process.py  correlation_matrix.py  cv.py  differential_analysis.py  estimation_plot.py  fold_change_violin_plot.py  fuzz_clustering.py  imputation.py  lfq_normalization.py  msstats.py  normalization.py  pca.py  phate_analysis.py  protocolsio.py  test_alphapept_process.py  test_correlation_matrix.py  test_cv.py  test_differential_analysis.py  test_estimation_plot.py  test_fuzz_clustering.py  test_get_coverage.py  test_imputation.py  test_library_check_peptide.py  test_msstats.py  test_normalization.py  test_pca.py  test_phate.py  test_protocolsio.py  test_remap_ptm.py
